--- a/aabenbar.html
+++ b/aabenbar.html
@@ -5,15 +5,18 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>aabenbar</title>
+    <meta content="noindex" name="robots">
     <link rel="stylesheet" href="style.css">
+    <link href="https://fonts.googleapis.com/css?family=Raleway&display=swap" rel="stylesheet">
+
 </head>
 
 <header>
     <nav>
         <ul>
-            <li><a href="index.html">Home</a></li>
             <li><a href="portfolio.html">Portfolio</a></li>
-            <li><a href="om.html">About</a></li>
+            <li><a href="index.html">Hjem</a></li>
+            <li><a href="om.html">Om</a></li>
         </ul>
     </nav>
     <div class="menu_toggle">☰</div>
@@ -24,7 +27,7 @@
     <section id="color">
         <section id="tema">
             <div class="sectionwrapper">
-                <h1>Tema3 Grundlæggende video</h1>
+                <h1>Tema 3 Grundlæggende video</h1>
                 <h2>03.05.03 redesign</h2>
                 <h2>Værktøjer brugt</h2>
                 <li>Html5</li>
@@ -68,7 +71,7 @@
             <div class="sectionwrapper">
                 <h1>Faglige Mål</h1>
                 <h2>Formål </h2>
-                <p>Dette var vores anden opgave i forløbet grundlæggende video. Vi skulle finde en virskomhed og lave et redesign af deres hjemmeside, derudover skulle vi lave en reklame film, fra virksomheden. Min gruppe valgte virksomheden åbenbar, fordi deres hjemesiden trænkte til en kærlig hånd. Og det kunne vi hjælpe med. </p>
+                <p>Dette var vores anden opgave i forløbet grundlæggende video. Vi skulle finde en virskomhed og lave et redesign af deres hjemmeside, derudover skulle vi lave en reklame film fra virksomheden. Min gruppe valgte virksomheden åbenbar, fordi deres hjemesiden trængte til en kærlig hånd. Og det kunne vi hjælpe med. </p>
                 <h2>Anvendelse af teori</h2>
                 <p>I dette tema lærte vi om grundlæggende redskaber indenfor videoproduktion. Herunder forarbejde indefor selve optagelse, samt postproduktion. Vi benytter mobiltelefoner til at optage lyd og extern lyd. og primerer pro og audition til at optage med. Jeg valgte at bruge programmet premierer pro, til at redigerer vores reklame film i.Da vi fik undervisning i dette program, og det kan mere end andre redegeringsprogramemr.</p>
 
@@ -84,11 +87,6 @@
                 <img src="assets/styletile.jpg" alt="style">
                 <h2>Lighthouse Demos</h2>
                 <img src="assets/lightdemos.png" alt="mobil">
-
-
-
-
-
             </div>
         </section>
 
