--- a/animation.html
+++ b/animation.html
@@ -5,15 +5,17 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>animation</title>
+    <meta content="noindex" name="robots">
     <link rel="stylesheet" href="style.css">
+    <link href="https://fonts.googleapis.com/css?family=Raleway&display=swap" rel="stylesheet">
 </head>
 
 <header>
     <nav>
         <ul>
-            <li><a href="index.html">Home</a></li>
             <li><a href="portfolio.html">Portfolio</a></li>
-            <li><a href="om.html">About</a></li>
+            <li><a href="index.html">Hjem</a></li>
+            <li><a href="om.html">Om</a></li>
         </ul>
     </nav>
     <div class="menu_toggle">☰</div>
@@ -23,7 +25,7 @@
     <section id="color">
         <section id="tema">
             <div class="sectionwrapper">
-                <h1>Tema2 Grundlæggende Animation</h1>
+                <h1>Tema 2 Grundlæggende Animation</h1>
                 <h2>03.03.04 Animations opgave</h2>
                 <h2>Værktøjer brugt</h2>
                 <li>Html5</li>
@@ -33,7 +35,7 @@
                 <li>Audition</li>
                 <h2>Link til spil </h2>
                 <p>Kan ses her: <a href="http://cathrinethoegersen.dk/kea/02-animation/spil/" target="_blank">Link</a></p>
-                <h2> spil Pitch</h2>
+                <h2> Spil Pitch</h2>
                 <p>Påskeharen har været på spil, og har gemt 10 påskeæg rundt i skoven. Hjælp haren med at indsamle de 10 påskeæg, men vær på vagt, for der popper bomber frem, som giver strafpoint.</p>
                 <img src="assets/eastertest.png" alt="spil">
 
@@ -46,7 +48,7 @@
             <div class="sectionwrapper">
                 <h1>Faglige Mål</h1>
                 <h2>Formål</h2>
-                <p> Dette var vores første opgave i temaet grundlæggende animation. Vi lærte viforskellige animationsteknikker, både visuelt og teknisk. Her,(Interaktivt spildesign baggrundsdesign, karakterdesign og grafisk spil) samt Javascript til at kode vores animationsspil i. Jeg valgte at bruge programmet adobe illustrater til at designe mine karakter og spilskærme.
+                <p> Dette var vores første opgave i temaet grundlæggende animation. Her lærte vi forskellige animationsteknikker, både visuelt og teknisk.(Interaktivt spildesign baggrundsdesign, karakterdesign og grafisk spil) samt Javascript til at kode vores animationsspil i. Jeg valgte at bruge programmet adobe illustrater til at designe mine karakter og spilskærme.Derefter skulle vi kode spillet i javascript.
 
             </div>
         </section>
@@ -55,8 +57,7 @@
             <div class="sectionwrapper">
                 <h1>Design dokumentation</h1>
                 <h2>Moodboard Inspiration</h2>
-                <p> løbet af den første uge fik vi undervisning i karakter-design, Storyboard og scenograf. Vi fik vist en masse video eksempler på både karakter-design og scenografi. Efterfølgende fik vi tid til at reflektere og tegne de karakterer der skulle være med. Jeg gik ud fra nogle af de karaktertræk som vi havde fået vist tidligere i undervisningen som inspiration, da jeg skulle til at designe mine egen karakter. Jeg vidste at jeg ville designe mine figurer i flat design. Så jeg fandt en kunstner som inspirationskilde, til mine designs.(Regina Nikiforova)
-                    Jeg skitserede en lille rund figur,(kanin) i en god og ond undgave. </p>
+                <p> løbet af den første uge fik vi undervisning i karakter-design, Storyboard og scenograf. Vi fik vist en masse video eksempler på både karakter-design og scenografi. Efterfølgende fik vi tid til at reflektere og tegne de karakterer, der skulle være med. Jeg gik ud fra nogle af de karaktertræk, som vi havde fået vist tidligere i undervisningen, som inspiration.Jeg vidste at jeg ville designe mine figurer i flat design. Så jeg fandt en kunstner som inspirationskilde, til mine designs.(Regina Nikiforova)Jeg skitserede en lille rund figur,(kanin) i en god og ond undgave. </p>
                 <img src="assets/Artboard86.png" alt="dyr">
                 <h2>Produktions skitser</h2>
                 <img src="assets/kanin.png" alt="pro">
