--- a/designsprint.html
+++ b/designsprint.html
@@ -6,14 +6,15 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Design Sprint</title>
     <link rel="stylesheet" href="style.css">
+    <link href="https://fonts.googleapis.com/css?family=Raleway&display=swap" rel="stylesheet">
 </head>
 
 <header>
     <nav>
         <ul>
-            <li><a href="index.html">Home</a></li>
             <li><a href="portfolio.html">Portfolio</a></li>
-            <li><a href="om.html">About</a></li>
+            <li><a href="index.html">Hjem</a></li>
+            <li><a href="om.html">Om</a></li>
         </ul>
     </nav>
     <div class="menu_toggle">☰</div>
@@ -24,13 +25,10 @@
     <section id="color">
         <section id="tema">
             <div class="sectionwrapper">
-                <h1>Tema4 Grundlæggende UX</h1>
+                <h1>Tema 4 Grundlæggende UX</h1>
                 <h2>04.01.01 Design Sprint</h2>
                 <h2>Værktøjer brugt</h2>
-                <li>Html5</li>
-                <li>css3</li>
-                <li>javascript</li>
-                <li>XD</li>
+                <li> Adobe XD</li>
                 <h2>Link til egen prototype </h2>
                 <p>Kan ses her: <a href="https://xd.adobe.com/view/c4f58569-7e84-49a4-7172-bd85a6f19977-b2c4/?fullscreen" target="_blank">Link</a></p>
                 <img src="assets/forsidea.png" alt="forsid">
@@ -47,7 +45,7 @@
                 <p> Dette var vores sidste tema inden eksamen. I dette forløb skulle vi lære samspillet mellem bruger og brugergrænseflader. Samt hvilke teorier,metoder,redskaber man kan bruge til test af produktion til digitale løsninger til smartphones. I den første uge udførte vi et designsprint sammen, i ugerne efterfølgende skulle vi selv udføre designsprintet først individuelt og derefter i grupper.
 
                     <h2> Anvendelse af teori</h2>
-                    <p> I dette forløb skulle vi lære samspillet mellem bruger og brugergrænseflader jeg valgte at bruge designsprint til at løse opgaven Egen prototype, da de var den metode som vi lærte ugen forinden, og det giver en god stuktur om hvordan man skal opbygge sin process. </p>
+                    <p>Jeg valgte at bruge designsprint til at løse vores stillet opgave nemlig Egen prototype. Da dette var denne metode, som vi lærte ugen forinden, selve designsprintet giver en god stuktur om hvordan man skal opbygge sin process. </p>
 
             </div>
         </section>
@@ -86,7 +84,7 @@
         <section id="kodning">
             <div class="sectionwrapper">
                 <h1>Evaluering af design sprint</h1>
-                <h2>Jeg synes at lighting Demos fungerede bedst, da der var her vi skulle undersøge hvilke ting som fungerede bedst på apps og hjemmesider. De giver en god grundviden, om hvad der fungere og hvad der ikke gør? Jeg kunne godt lide at vi fik samlet alle vores ideer, som gav en god grundstruktur til at designe sin egen prototype. </h2>
+                <p>Jeg synes at lighting Demos fungerede bedst, da der var her vi skulle undersøge, hvilke ting som fungerede bedst på apps og hjemmesider. De giver en god grundviden, om hvad der fungere og hvad der ikke gør? Jeg kunne godt lide at vi fik samlet alle vores ideer, som gav en god grundstruktur til at designe sin egen prototype. </p>
 
             </div>
         </section>
