--- a/index.html
+++ b/index.html
@@ -5,7 +5,9 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>portfolio</title>
+    <meta content="noindex" name="robots">
     <link rel="stylesheet" href="style.css">
+    <link href="https://fonts.googleapis.com/css?family=Raleway&display=swap" rel="stylesheet">
 </head>
 
 <body>
@@ -13,7 +15,7 @@
         <nav>
             <ul>
                 <li><a href="portfolio.html">Portfolio</a></li>
-                <li><a href="om.html">About</a></li>
+                <li><a href="om.html">Om</a></li>
             </ul>
         </nav>
         <div class="menu_toggle">☰</div>
