--- a/nativeapp.html
+++ b/nativeapp.html
@@ -6,14 +6,16 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Native App</title>
     <link rel="stylesheet" href="style.css">
+    <link href="https://fonts.googleapis.com/css?family=Raleway&display=swap" rel="stylesheet">
+
 </head>
 
 <header>
     <nav>
         <ul>
-            <li><a href="index.html">Home</a></li>
             <li><a href="portfolio.html">Portfolio</a></li>
-            <li><a href="om.html">About</a></li>
+            <li><a href="index.html">Hjem</a></li>
+            <li><a href="om.html">Om</a></li>
         </ul>
     </nav>
     <div class="menu_toggle">☰</div>
@@ -24,12 +26,9 @@
     <section id="color">
         <section id="tema">
             <div class="sectionwrapper">
-                <h1>Tema4 Grundlæggende UX</h1>
+                <h1>Tema 4 Grundlæggende UX</h1>
                 <h2>04.03.031 Native APP</h2>
                 <h2>Værktøjer brugt</h2>
-                <li>Html5</li>
-                <li>css3</li>
-                <li>javascript</li>
                 <li>XD</li>
                 <h2>Link til dokumentationsside </h2>
                 <p>Kan ses her: <a href="https://docs.google.com/document/d/1zJ7iwYF1cpZsghpFmKy5oUF3C-iTaBeqE4S3wIKxNxY/edit" target="_blank">Link</a></p>
@@ -52,7 +51,9 @@
                 </p>
 
                 <h2> Anvendelse af teori</h2>
-                <p>Dette var vores sidste opgave i forløbet grundlæggende UX, ud fra de metoder og viden som vi havde fået i de forlæggende uger, skulle vi designe en prototype, som skulle hjælpe de studerende på Kea.Vi brugte programmet XD til at designe vores prototype i. I min gruppe sotd jeg for den visuelle stil, at farverne passede sammen, samtidtig hjalp jeg med opbygningen af skærmene.</p>
+                <p>Dette var vores sidste opgave i forløbet grundlæggende UX, ud fra de metoder og viden, som vi havde fået i de forlæggende uger, skulle vi designe en prototype, som skulle hjælpe de studerende på Kea.Vi brugte programmet XD til at designe vores prototype i. I min gruppe stod jeg for den visuelle stil, her farvevalg. Samtidtig hjalp jeg med opbygningen af skærmene.</p>
+                <H2>Introduktion til prototype</H2>
+                <p> Vi valgte at lave en app/et spil som tager udgangspunkt i flere af de studerendes problem, med mangel på motivation. Vi har lavet det som et battle spil, hvor du kan teste din viden, spille mod andre elever og udvikle din avatar. På den måde håber vi på at det kan holde de studerende til undervisningen så de kan bruge det de lærer, til at konkurrerer med hinanden.</p>
             </div>
         </section>
 
