--- a/om.html
+++ b/om.html
@@ -5,7 +5,9 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>om</title>
+    <meta content="noindex" name="robots">
     <link rel="stylesheet" href="style.css">
+    <link href="https://fonts.googleapis.com/css?family=Raleway&display=swap" rel="stylesheet">
 </head>
 <header>
     <nav>
@@ -21,9 +23,11 @@
     <section id="about">
         <div class="wrapper">
             <div class="content">
-                <h2>Om Mig</h2>
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Laborum fuga, dolor! Dolorem cupiditate accusantium, odit voluptas ea porro animi eos sed, minus ipsam natus vero, ad atque eaque sit officia.</p>
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Minus, qui veritatis expedita dolore iusto perspiciatis iure quod ducimus praesentium enim minima culpa repellat possimus eveniet aut quibusdam dolorem, laborum nulla.</p>
+                <h2>Generel Information</h2>
+
+                <p>Jeg hedder Cathrine Thøgersen er 20 år gammel. Og studerer multimediedesigner på Københavns Erhvervserkadermi KEA. Jeg interesserer mig i høj grad for grafisk design og teknik i samspil, derfor giver multimediedesign-uddannelsen mig mulighed for at udvikle mig indenfor disse felter. Jeg er et naturmennekse og i min fritid elsker jeg at være aktiv og opleve hvad naturen har at byde på. </p>
+                <h2>Kompetencer</h2>
+                <p> Uddannelsen har givet mig nye tekniske kompetencer inden for grafisk design, webudvikling, film, animation og programmering/kodning. Sideløbende arbejder vi med markedsføring og kommunikation, og beskæftiger os derfor interaktivt med forskellige aspekter af feltet. Jeg har arbjdet med grafisk design før jeg startede på Kea, men jeg har udvidet min horrisont indenfor webudvikling.</p>
             </div>
             <img src="assets/Artboard36.png" alt="migg">
 
