--- a/responsivt.html
+++ b/responsivt.html
@@ -5,14 +5,19 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>responsivtsite</title>
+    <meta content="noindex" name="robots">
     <link rel="stylesheet" href="style.css">
+    <link href="https://fonts.googleapis.com/css?family=Raleway&display=swap" rel="stylesheet">
+
 </head>
 
 <header>
     <nav>
         <ul>
-            <li><a href="index.html">Home</a></li>
-            <li><a href="om.html">About</a></li>
+            <li><a href="portfolio.html">Portfolio</a></li>
+            <li><a href="index.html">Hjem</a></li>
+            <li><a href="om.html">Om</a></li>
+
         </ul>
     </nav>
     <div class="menu_toggle">☰</div>
@@ -22,7 +27,7 @@
     <section id="color">
         <section id="tema">
             <div class="sectionwrapper">
-                <h1>Tema1 Grundlæggende HTML</h1>
+                <h1>Tema 1 Grundlæggende HTML</h1>
                 <h2>01.04.02 Responsivt_site_v2</h2>
                 <h2>Værktøjer brugt</h2>
                 <li>Html5</li>
@@ -45,7 +50,7 @@
                 <p> Dette var vores første opgave, da vi startede på Københavns Erhvervs Akademi (KEA). Vi blev introduceret til de grundlæggende faglige begreber inden for design af digitale brugergrænseflader, her html og css. Samt indholdsproduktion, digital kommunikation og responsivt webdesign. Derudover fik vi de første hands-on færdigheder, inden for billedebehandling i photoshop, opsætning af tekst og billeder i adobe Indesign og Adobe XD.
 
                     <h2> Anvendelse af teori</h2>
-                    <p>Vi introduceret til først HTML og hvad sproget indebar, derefter lavede vi et par øvelser med ren HTML, uden styling i CSS overhovedet.Nu skulle vi lære at anvende flexbox. Dette hjalp med forståelssen af hvordan (vores hjemmeside) skulle bygges op, med hensyn til sectioner, div’er og billeder. Jeg valgte at bruge flexbox til at style vores stilartside
+                    <p> Først HTML og hvad sproget indebar, derefter lavede vi et par øvelser med ren HTML, uden styling i CSS overhovedet.Nu skulle vi lære at anvende flexbox. Dette hjalp med forståelssen af hvordan (vores hjemmeside) skulle bygges op, med hensyn til sectioner, div’er og billeder. Jeg valgte at bruge flexbox til at style vores stilartside.
                         <h2>Opgaven</h2>
                         <p>Vi blev sat i grupper, udvalgt af lærerne og fik til opgave at lave vores egen hjemmeside, ud fra en stilart vi fik tildelt. Min gruppe fik tildelt stilarten ‘Postmodernisme’. Vi startede med at researche på stilarten, hvor vi kiggede på forskellige sider omkring hvad der var karaktertræk for postmodernisme. Der fandt vi fandt hurtigt ud af, at der var rigtig meget indhold og for det meste billede materiale. Efterfølgende skulle vi lave en segmentering og vælge et segment til vores stilart. Som vi så lavede en persona ud fra.</p>
 
@@ -56,7 +61,7 @@
             <div class="sectionwrapper">
                 <h1>Design Dokumentation</h1>
                 <h2>Farveteori</h2>
-                <p>Med den viden som vi fik i farveteori og typografi skulle vi udarbejde et ‘Styletile’ som man vil associere med ‘postmodernisme’ og som var passende til vores segment. Vi skulle også udarbejde et splash billede, som skulle passe til forskellige formater og devices. Til sidst udarbejdet vi et favikon som det skulle bruges som et logo til vores stilartside. Jeg valgte at designe mit favicon i adobe Illustrator</p>
+                <p>Med den viden som vi fik i farveteori og typografi skulle vi udarbejde et ‘Styletile’ som man vil associere med ‘postmodernisme’ og som var passende til vores segment. Vi skulle også udarbejde et splash billede, som skulle passe til forskellige formater og devices. Her brugte jeg programmerne photoshop og illustrator. Til sidst udarbejdet vi et favikon som det skulle bruges som et logo til vores stilartside. </p>
                 <img src="assets/postsplash.png" alt="splash">
                 <figcaption>Splahbillede</figcaption>
                 <img src="assets/favicon.png" alt="favicon">
