--- a/sexsamfund.html
+++ b/sexsamfund.html
@@ -5,15 +5,18 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Sex og Samfund</title>
+    <meta content="noindex" name="robots">
     <link rel="stylesheet" href="style.css">
+    <link href="https://fonts.googleapis.com/css?family=Raleway&display=swap" rel="stylesheet">
+
 </head>
 
 <header>
     <nav>
         <ul>
-            <li><a href="index.html">Home</a></li>
             <li><a href="portfolio.html">Portfolio</a></li>
-            <li><a href="om.html">About</a></li>
+            <li><a href="index.html">Hjem</a></li>
+            <li><a href="om.html">Om</a></li>
         </ul>
     </nav>
     <div class="menu_toggle">☰</div>
@@ -24,7 +27,7 @@
     <section id="color">
         <section id="tema">
             <div class="sectionwrapper">
-                <h1>Tema2 Grundlæggende Animation</h1>
+                <h1>Tema 2 Grundlæggende Animation</h1>
                 <h2>02.05.03 Gruppeopgave sex og samfund</h2>
                 <h2>Værktøjer brugt</h2>
                 <li>Html5</li>
@@ -47,8 +50,8 @@
             <div class="sectionwrapper">
                 <h1>Faglige Mål</h1>
                 <h2>Kundecase</h2>
-                <p> Vi havde en kundecase som vi sluttede dette tema af med, denne gang var Sex & Samfund der blev de udvalgte her privatsnak. Vi havde med den forrige opgave hele tiden bygget op til denne opgave.
-                    Opgaven gik ud på at vi skulle lave et spil for unge i alderen 13-15 år.Selve spillet skulle skabe opmærksomhed omkring emnet billeddeling, og hvilke konsekvenser der medfølger ved at dele upassende og ulovlige billeder på f.eks. de sociale medier.Det var vores opgave at finde ud af, hvordan man kunne formidle det budskab på en interessant og alligevel informativ måde.Vi blev hurtigt enige i min gruppe at vi ville lave et enkelt spil, hvor der ikke var for meget andet end budskabet, og at brugeren hellere skulle følge med.
+                <p> Dette var vores anden opgave i temaet grundlæggende animation, vi skulle bruge den viden om javascipt, som vi havde fået i sidste opgave til at kode et helt nyt spil. Men denne gang var det en kundecase, som vi skulle arbejde med. Vi fik kunden Sex & Samfund, derunder privatsnak.
+                    Opgaven gik ud på at vi skulle lave et spil for unge i alderen 13-15 år.Selve spillet skulle skabe opmærksomhed omkring emnet billeddeling, og hvilke konsekvenser der medfølger ved at dele upassende og ulovlige billeder på f.eks. de sociale medier.Det var vores opgave at finde ud af, hvordan, man kunne formidle det budskab på en interessant og alligevel informativ måde.Vi blev hurtigt enige i min gruppe om, at vi ville lave et enkelt spil, hvor der ikke var for meget andet end budskabet, og at brugeren hellere skulle følge med.
                     <h2>Pich</h2>
                     <p> Spillet går ud på at man skal hjælpe en pige, der står med hendes mobil i hånden, med hvad hun må dele og hvad hun ikke må dele. Der bliver stillet 6 spørgsmål, som fremgår som om at det er noget hun spørger sig selv om (i en tankeboble) og spilleren af spillet skal derefter trykke på del eller del ikke, som om at det var hende. Spilleren har tre liv. Hvis spilleren svare forkert 3 gange, taber personen spillet.</p>
 
