--- a/webprotorype.html
+++ b/webprotorype.html
@@ -6,14 +6,15 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Webprototype</title>
     <link rel="stylesheet" href="style.css">
+    <link href="https://fonts.googleapis.com/css?family=Raleway&display=swap" rel="stylesheet">
 </head>
 
 <header>
     <nav>
         <ul>
-            <li><a href="index.html">Home</a></li>
             <li><a href="portfolio.html">Portfolio</a></li>
-            <li><a href="om.html">About</a></li>
+            <li><a href="index.html">Hjem</a></li>
+            <li><a href="om.html">Om</a></li>
         </ul>
     </nav>
     <div class="menu_toggle">☰</div>
@@ -24,8 +25,8 @@
     <section id="color">
         <section id="tema">
             <div class="sectionwrapper">
-                <h1>Tema4 Grundlæggende UX</h1>
-                <h2>04.02.01 Web protorype</h2>
+                <h1>Tema 4 Grundlæggende UX</h1>
+                <h2>04.02.01 Web prototype</h2>
                 <h2>Værktøjer brugt</h2>
                 <li>Html5</li>
                 <li>Css3</li>
@@ -36,9 +37,6 @@
                 <h2>Link til Trello </h2>
                 <p>Kan ses her: <a href="https://trello.com/b/sSDPQo41/web-prototype" target="_blank">Link</a></p>
                 <img src="assets/forsidec.png" alt="web">
-
-
-
             </div>
         </section>
 
@@ -46,10 +44,7 @@
             <div class="sectionwrapper">
                 <h1>Faglige Mål</h1>
                 <h2>Formål</h2>
-                <p> Dette var vores første opgave, da vi startede på Københavns Erhvervs Akademi (KEA). Vi blev introduceret til de grundlæggende faglige begreber inden for design af digitale brugergrænseflader, her html og css. Samt indholdsproduktion, digital kommunikation og responsivt webdesign. Derudover fik vi de første hands-on færdigheder, inden for billedebehandling i photoshop, opsætning af tekst og billeder i adobe Indesign og Adobe XD.
-
-                    <h2> Anvendelse af teori</h2>
-                    <p>Jeg valgte at benytte Html og css, til at kode min stilartside. Vi blev sat i grupper, udvalgt af lærerne og fik til opgave at lave vores en hjemmeside, ud fra en stilart vi fik tildelt. Min gruppe fik tildelt stilarten ‘Postmodernisme’. Vi startede med at researche på stilarten, hvor vi kiggede på forskellige sider omkring hvad der var karaktertræk for postmodernisme. Der fandt vi fandt hurtigt ud af, at der var rigtig meget indhold og for det meste billede materiale. Efterfølgende skulle vi lave en segmentering og vælge et segment til vores stilart. Som vi så lavede en persona ud fra.</p>
+                <p> Dette var vores sidste tema inden eksamen. I dette forløb skulle vi lære samspillet mellem bruger og brugergrænseflader. Samt hvilke teorier,metoder,redskaber man kan bruge til test af produktion til digitale løsninger til smartphones. Jeg valgte at bruge grid til at kode forsiden i webprototypen, frem for flexbox, da det var nemmere at opnår det givende design.
 
             </div>
         </section>
@@ -57,7 +52,7 @@
         <section id="dokumentation">
             <div class="sectionwrapper">
                 <h1>Udvalgte kodeforklaringer</h1>
-                <h2>Css Forside</h2>
+                <h2>Css Forside Grid</h2>
                 <img src="assets/menukode.png" alt="kode">
                 <p>På denne side er der brugt grid- template-colums til at definerer hvor mange rækker der skal være. alle containerne har fået størrelsen 125px, (så hvert billede har den samme størrelse) på række 2 (techlounge og mail) har jeg brugt grid-colums: 1/span 2: til at definerer størrelse på boksene og lokation. her 1/span 2: </p>
                 <h2>Drop-down menu Javascript</h2>
