--- a/portfolio.html
+++ b/portfolio.html
@@ -29,7 +29,9 @@
 
             <a href="sexsamfund.html"><img src="assets/gruppeopg.png" alt="stopdeling"></a>
 
-            <a href="aabenbar.html"><img src="assets/abar.png" alt="aabenbar"></a>
+            <a href="pilot.html"><img src="assets/Artboard%20114.png" alt="pilot"></a>
+
+            <a href="aabenbar.html"><img src="assets/redesignf.png" alt="aabenbar"></a>
 
             <a href="designsprint.html"><img src="assets/designsprint.png" alt="designsprint"></a>
 
