--- a/designsprint.html
+++ b/designsprint.html
@@ -42,10 +42,10 @@
             <div class="sectionwrapper">
                 <h1>Faglige Mål</h1>
                 <h2>Formål</h2>
-                <p> Dette var vores sidste tema inden eksamen. I dette forløb skulle vi lære samspillet mellem bruger og brugergrænseflader. Samt hvilke teorier,metoder,redskaber man kan bruge til test af produktion til digitale løsninger til smartphones. I den første uge udførte vi et designsprint sammen, i ugerne efterfølgende skulle vi selv udføre designsprintet først individuelt og derefter i grupper.
+                <p> Dette var vores sidste tema inden eksamen. I dette forløb skulle vi lære samspillet mellem bruger og brugergrænseflader. Samt hvilke teorier, metoder, redskaber, som man kan bruge til test af produktion af digitale løsninger til smartphones. I den første uge udførte vi et designsprint sammen, i ugerne efterfølgende skulle vi selv udføre designsprintet først individuelt og derefter i grupper.
 
                     <h2> Anvendelse af teori</h2>
-                    <p>Jeg valgte at bruge designsprint til at løse vores stillet opgave nemlig Egen prototype. Da dette var denne metode, som vi lærte ugen forinden, selve designsprintet giver en god stuktur om hvordan man skal opbygge sin process. </p>
+                    <p>Jeg valgte at bruge designsprint til at løse vores stillet opgave, nemlig Egen prototype. Da dette var denne metode, som vi lærte ugen forinden. Selve designsprintet giver en god stuktur om, hvordan man skal opbygge sin process. </p>
 
             </div>
         </section>
